--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "bluetooth-assassin-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2",
-    "moment": "^2.19.1",
-    "mongoose": "^4.13.0",
-    "morgan": "^1.9.0"
-  },
-  "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "nodemon": "^1.12.1"
-  }
+   "name": "bluetooth-assassin-backend",
+   "version": "1.0.0",
+   "description": "",
+   "scripts": {
+      "start": "node ./bin/www",
+      "test": "echo \"Error: no test specified\" && exit 1"
+   },
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "body-parser": "^1.18.2",
+      "express": "^4.16.2",
+      "moment": "^2.19.1",
+      "mongoose": "^4.13.0",
+      "morgan": "^1.9.0"
+   },
+   "devDependencies": {
+      "babel": "^6.23.0",
+      "babel-cli": "^6.26.0",
+      "babel-preset-es2015": "^6.24.1",
+      "babel-preset-stage-0": "^6.24.1",
+      "nodemon": "^1.12.1"
+   }
 }
