--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./bin/www --exec babel-node --presets es2015,stage-2",
+    "test": "./node_modules/.bin/mocha --require babel-register --timeout 5000"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^3.2.0",
     "chai-http": "^1.0.0",
+    "mocha": "^4.0.1",
     "nodemon": "^1.12.1",
     "standard": "^10.0.3"
   }
