--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -13,7 +13,8 @@
     "express": "^4.16.2",
     "moment": "^2.19.1",
     "mongoose": "^4.13.0",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "pm2": "^2.8.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
