--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -21,9 +21,14 @@
   "dependencies": {
     "expo": "^22.0.2",
     "moment": "^2.19.1",
+
     "react": "^16.2.0",
     "react-native": "^0.49.5",
     "react-native-elements": "^0.18.4",
     "react-native-vector-icons": "^4.4.2"
+
+    
+    "react-native-router-flux": "^4.0.0-beta.24"
+
   }
 }
