--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -24,6 +24,8 @@
     "react": "^16.2.0",
     "react-native": "^0.49.5",
     "react-native-elements": "^0.18.4",
-    "react-native-vector-icons": "^4.4.2"
+    "react-native-vector-icons": "^4.4.2",
+    "react-navigation": "^1.0.0-beta.21",
+    "websql": "^0.4.4"
   }
 }
