--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -25,6 +25,7 @@
     "react": "^16.2.0",
     "react-native": "^0.49.5",
     "react-native-elements": "^0.18.4",
+    "react-native-maps": "^0.18.3",
     "react-native-router-flux": "^4.0.0-beta.24",
     "react-native-vector-icons": "^4.4.2"
   }
